--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 #root {
-  font-family: Papyrus, fantasy; 
+  font-family: Arial, Helvetica, sans-serif; 
   font-size: 18px; 
   font-style: normal; 
   font-variant: normal;
