--- a/src/Modal.css
+++ b/src/Modal.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width:100%;
+  width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
   z-index: 1000;
@@ -13,10 +13,11 @@
   position: fixed;
   background: white;
   width: 80%;
-  height: auto;
+  max-height: 80%; /* Set a maximum height for the modal */
+  overflow-y: auto; /* Enable vertical scrolling if needed */
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   padding: 1em;
 }
 
@@ -25,6 +26,6 @@
   background: none;
   border: none;
   position: absolute;
-  top: 0em;
+  top: 0.2em;
   right: 0.2em;
 }
