--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ html {
 .card {
   margin-bottom: 20px;
 }
+
+.card:hover{
+  transform: scale(1.05);
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
+}
