fixes grid on movies index

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,11 @@ html {
 }
 
 .card-deck {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
+  grid-gap: 1rem;
   justify-content: space-between;
+  
 }
 
 .card {
